--- a/react_src/package.json
+++ b/react_src/package.json
@@ -12,8 +12,9 @@
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
-    "react-native-web": "~0.13.12",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-web": "^0.16.3",
+    "react-scripts": "3.4.1",
     "expo-constants": "~10.1.3",
     "react-native-paper": "3.6.0"
   },
