--- a/node_src/package.json
+++ b/node_src/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "mongodb": "^3.4.1",
-    "src": "^1.1.2"
+    "mongoose": "^5.12.9",
+    "src": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
